--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: sans-serif;
-  background: #f8f9fa;
+  background: #293848;
   padding: 2rem;
   text-align: center;
 }
@@ -8,7 +8,7 @@ body {
 .container {
   max-width: 600px;
   margin: auto;
-  background: white;
+  background: rgb(99, 103, 225);
   padding: 2rem;
   border-radius: 10px;
   box-shadow: 0 0 10px #ccc;
