--- a/style.css
+++ b/style.css
@@ -1,29 +1,45 @@
 body {
-  font-family: sans-serif;
-  background: #293848;
-  padding: 2rem;
-  text-align: center;
+  margin: 0;
+  padding: 0;
+  font-family: 'Segoe UI', sans-serif;
+  background: linear-gradient(to bottom, #ccc, #444);
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .container {
-  max-width: 600px;
-  margin: auto;
-  background: rgb(99, 103, 225);
-  padding: 2rem;
-  border-radius: 10px;
-  box-shadow: 0 0 10px #ccc;
+  background: #3e4a56;
+  padding: 40px;
+  border-radius: 12px;
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.4);
+  text-align: center;
+  width: 600px;
+  color: #fff;
 }
 
 input {
-  padding: 10px;
-  width: 60%;
+  width: 80%;
+  padding: 12px 15px;
+  border: none;
+  border-radius: 6px;
   font-size: 16px;
+  margin-bottom: 20px;
 }
 
 button {
-  padding: 10px 15px;
-  font-size: 16px;
-  margin-left: 10px;
+   padding: 10px 20px;
+  background-color: #ddd;
+  border: none;
+  border-radius: 6px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+button:hover {
+  background-color: #bbb;
 }
 
 #results {
